macOS: Add missing QT_MANGLE_NAMESPACE

KeyValueObserver and RunLoopModeTracker were causing
“Class is implemented in both...” messages when loading
multiple namespaced Qt versions into the same process.

Change-Id: Idbd2229c61cde6fba2c12b35d045390a371dee68
Fixes: QTBUG-89059
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit c2c163a7d8cb95a4901b742a72184975e791635a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>